--- a/includes/css/jquery.orgchart.css
+++ b/includes/css/jquery.orgchart.css
@@ -175,7 +175,7 @@
   padding: 3px;
   border: 2px dashed transparent;
   text-align: center;
-  width: 130px;
+  min-width: 130px;
 }
 
 .orgchart.l2r .node, .orgchart.r2l .node {
@@ -275,7 +275,7 @@
 
 .orgchart .node .content {
   width: 100%;
-  height: 20px;
+  min-height: 20px;
   font-size: 11px;
   line-height: 18px;
   border: 1px solid rgba(217, 83, 79, 0.8);
@@ -502,11 +502,6 @@
 }
 
 
-
-
-
-
-
 .orgchart .top-level .title {
   background-color: #006699;
 }
@@ -531,11 +526,11 @@
 
 .orgchart .second-menu-icon {
     transition: opacity .5s;
-    opacity: 0;
+    opacity: 0.7;
     right: -5px;
     top: -5px;
     z-index: 2;
-    color: rgba(68, 157, 68, 0.5);
+    color: rgb(40, 138, 40);
     font-size: 18px;
     position: absolute;
 }
@@ -545,20 +540,18 @@
 .orgchart .node:hover .second-menu-icon {
   opacity: 1;
 }
-.orgchart .node .second-menu {
-  display: none;
-  position: absolute;
-  top: 0;
-  right: -70px;
-  border-radius: 35px;
-  box-shadow: 0 0 10px 1px #999;
-  background-color: #fff;
-  z-index: 1;
-}
-.orgchart .node .second-menu .avatar {
+
+.avatar {
   width: 60px;
   height: 60px;
   border-radius: 30px;
-    float: left;
-  margin: 5px;
+  float: left;
+  margin-right: 30px;
+  margin-left:10px;
+}
+
+.content-info {
+	float:right;
+	margin-top:10px;
+	margin-right:10px;
 }
